--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@solidjs/router": "^0.6.0",
+    "animate.css": "^4.1.1",
+    "firebase": "^9.15.0",
     "solid-js": "^1.6.6"
   }
 }
