--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/md5": "^2.3.2",
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
     "vite-plugin-solid": "^2.5.0"
@@ -17,6 +18,7 @@
     "@solidjs/router": "^0.6.0",
     "animate.css": "^4.1.1",
     "firebase": "^9.15.0",
+    "md5": "^2.3.0",
     "solid-js": "^1.6.6"
   }
 }
