--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/luxon": "^3.2.0",
     "@types/md5": "^2.3.2",
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
@@ -18,6 +19,7 @@
     "@solidjs/router": "^0.6.0",
     "animate.css": "^4.1.1",
     "firebase": "^9.15.0",
+    "luxon": "^3.2.1",
     "md5": "^2.3.0",
     "solid-js": "^1.6.6"
   }
